<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EncryptEmbedActivity"
    android:background="@drawable/background"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="#00BCD4"
        android:gravity="center"
        android:text="@string/txt23"
        android:textColor="#01579B"
        android:textSize="25sp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/txt23"
        android:scaleType="centerInside"
        android:background="@color/white"/>

    <Button
        android:id="@+id/btn_select_image"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:backgroundTint="#0E2DDA"
        android:text="@string/txt10"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@drawable/rounded_button"/>

    <EditText
        android:id="@+id/et_message"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_below="@id/btn_select_image"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/txt11"
        android:textColorHint="@color/black"
        android:gravity="center"
        android:inputType="text"
        android:autofillHints="Secret Message" />

    <EditText
        android:id="@+id/et_key"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_below="@id/et_message"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/txt12"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        android:gravity="center"
        android:autofillHints="Secret Encryption Password" />

    <Button
        android:id="@+id/btn_embed_message"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_key"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/rounded_button"
        android:text="@string/txt15"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="italic"/>

</RelativeLayout>