<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:padding="20dp"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/tvlogin"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/signup"
        android:textColor="#039BE5"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#00BCD4"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <EditText
                android:id="@+id/et_signup_name"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:autofillHints="Enter Full Name"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textColorHint="#0EA5E9"
                android:drawableStart="@drawable/baseline_person_pin_24"
                android:drawablePadding="10dp"
                android:drawableTint="#2196F3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_signup_email"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:autofillHints="Enter Email"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textColorHint="#0EA5E9"
                android:drawableStart="@drawable/baseline_mark_email_unread_24"
                android:drawablePadding="10dp"
                android:drawableTint="#2196F3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_signup_name" />

            <EditText
                android:id="@+id/et_signup_password"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:autofillHints="Enter Password"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textColorHint="#0EA5E9"
                android:drawableStart="@drawable/baseline_security_24"
                android:drawablePadding="10dp"
                android:drawableTint="#2196F3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_signup_email" />

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="300dp"
                android:layout_height="56dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/rounded_button"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_signup_password" />

            <TextView
                android:id="@+id/tv_login_redirect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/already_have_an_account_login"
                android:textColor="#455A64"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_signup" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
